authz/deny-audience-and-path-access-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: online-boutique
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: DENY
  rules:
  - when:
    - key: "request.auth.audiences"
      notValues: ["boutiquestore.com"]
    to:
    - operation:
        paths: ["/cart"]
